istio/virtual-service-traffic-shifting.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userapi-service
spec:
  hosts:
    - userapi-service
  http:
  - route:
    - destination:
        host: userapi-service
        subset: 2
      weight: 50
    - destination:
        host: userapi-service
        subset: v1
      weight: 50
