istio/virtual-service-user-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userapi-service
spec:
  hosts:
    - userapi-service
  http:
  - match:
    - headers:
        username:
          exact: chems
    route:
    - destination:
        host: userapi-service
        subset: v1
  - route:
    - destination:
        host: userapi-service
        subset: v2
