istio/virtual-service-v1-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Service
metadata:
  name: redis-service
spec:
  hosts:
  - redis-service
  http:
  - route:
    - destination:
        host: redis-service
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userapi-service
spec:
  hosts:
  - userapi-service
  http:
  - route:
    - destination:
        host: userapi-service
        subset: v1
